--- a/src/main/resources/api/school-service-api.yaml
+++ b/src/main/resources/api/school-service-api.yaml
@@ -4,25 +4,69 @@ info:
   version: latest
 
 paths:
-  /school/course/all/ids:
+  /school/course/all/id:
     get:
       tags:
       - course-controller
       summary: Return ids of all courses
-      operationId: getAllCourseIds
+      operationId: getAllCoursesIds
       responses:
         '200':
           description: All course ids
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/CourseIds'
+                type: array
+                items:
+                  type: string
+  /school/course/all/available:
+    get:
+      tags:
+      - course-controller
+      summary: Return brief detail of courses that are available for student to take (e.g. not yet completed)
+      operationId: getAllAvailableCourses
+      parameters:
+      - name: department
+        in: query
+        description: Department Type
+        schema:
+          $ref: '#/components/schemas/DepartmentType'
+      - name: term
+        in: query
+        description: Term
+        schema:
+          $ref: '#/components/schemas/Term'
+      - name: year
+        in: query
+        description: Start year of the course
+        schema:
+          type: integer
+          format: int32
+          minimum: 1993
+          maximum: 2100
+      - name: credits
+        in: query
+        description: Credits of the course
+        schema:
+          type: integer
+          format: int32
+          minimum: 0
+          maximum: 60
+      responses:
+        '200':
+          description: (Brief) details of all available courses
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CourseDetailBrief'
   /school/course/all/detail:
     get:
       tags:
       - course-controller
       summary: Return complete details of all courses
-      operationId: getAllCourseDetails
+      operationId: getAllCoursesDetails
       responses:
         '200':
           description: All course details
@@ -35,7 +79,7 @@ paths:
       tags:
       - course-controller
       summary: Return brief details of all courses
-      operationId: getAllCourseDetailsBrief
+      operationId: getAllCoursesDetailsBrief
       responses:
         '200':
           description: All course brief details
@@ -87,6 +131,95 @@ paths:
                 $ref: '#/components/schemas/CourseDetailBrief'
         '404':
           description: Course not found
+  /school/course/{courseId}/students:
+    get:
+      tags:
+      - course-controller
+      summary: Return list of students (enriched with info from student service) enrolled in course with given id. When People service is unavailable, returns list of only student ids without enriching
+      operationId: getCourseStudents
+      parameters:
+      - name: courseId
+        in: path
+        description: Id of course to return students for
+        required: true
+        schema:
+          type: string
+      - name: gpa
+        in: query
+        description: Include student's GPA in the list
+        schema:
+          type: boolean
+      responses:
+        '200':
+          description: List of students enrolled in course with given Id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StudentsInCourse'
+        '404':
+          description: Course not found
+        '503':
+          description: Student service is unavailable
+
+  /school/course/{courseId}/students/no-fallback: # serves just as a demo
+    get:
+      tags:
+      - course-controller-demo-cases
+      summary: Return list of students (enriched with info from student service) enrolled in course with given id.
+      operationId: getCourseStudentsNoFallback
+      parameters:
+      - name: courseId
+        in: path
+        description: Id of course to return students for
+        required: true
+        schema:
+          type: string
+      - name: gpa
+        in: query
+        description: Include student's GPA in the list
+        schema:
+          type: boolean
+      responses:
+        '200':
+          description: List of students enrolled in course with given Id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StudentsInCourse'
+        '404':
+          description: Course not found
+        '503':
+          description: Student service is unavailable
+
+  /school/course/{courseId}/students/not-implemented: # serves just as a demo
+    get:
+      tags:
+      - course-controller-demo-cases
+      summary: Should return list of students in a course enriched with info from people service. However, people service has not been implemented yet. Returns only list of student ids
+      operationId: getCourseStudentsNotImplemented
+      parameters:
+      - name: courseId
+        in: path
+        description: Id of course to return students for
+        required: true
+        schema:
+          type: string
+      - name: gpa
+        in: query
+        description: Include student's GPA in the list
+        schema:
+          type: boolean
+      responses:
+        '200':
+          description: List of students enrolled in course with given Id
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/StudentsInCourse'
+        '404':
+          description: Course not found
+        '503':
+          description: Student service is unavailable
 
   /school/department/list:
     get:
@@ -101,8 +234,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/DepartmentList'
-
-  # TODO maybe add similar endpoint to this one that will return more detail about department and is sortable
 
   /school/department/detail:
     get:
@@ -195,27 +326,41 @@ components:
       properties:
         id:
           type: string
-        name:
+        courseName:
+          type: string
+        courseCode:
           type: string
         description:
           type: string
-        department:
-          $ref: '#/components/schemas/Department'
+        departmentId:
+          type: string
+        departmentType:
+          $ref: '#/components/schemas/DepartmentType'
         credits:
           type: integer
           format: int32
-        duration:
+        teacherId:
+          type: string
+        term:
+          $ref: '#/components/schemas/Term'
+        startYear:
           type: integer
           format: int32
-        enrolledStudentsCount:
-          type: integer
-          format: int32
+          minimum: 1993
+          maximum: 2100
         enrolledStudentsIds:
           type: array
           default: []
           items:
             type: string
-        # TODO add list of student IDs enrolled in course
+        enrolledStudentsCount:
+          type: integer
+          format: int32
+    Term:
+      type: string
+      enum:
+      - WINTER
+      - SUMMER
     MultipleCourseDetail:
       type: object
       properties:
@@ -224,6 +369,46 @@ components:
           items:
             $ref: '#/components/schemas/CourseDetail'
         coursesCount:
+          type: integer
+          format: int32
+    StudentsInCourse:
+        type: object
+        properties:
+          students:
+            type: array
+            items:
+              $ref: '#/components/schemas/StudentDetail'
+          studentsCount:
+            type: integer
+            format: int32
+    StudentDetail: # TODO possibly extend with more details
+      type: object
+      properties:
+        id:
+          type: string
+        name:
+          type: string
+        email:
+          type: string
+        phone:
+          type: string # TODO change to number type from Student Service
+        courses:
+          type: array
+          items:
+            type: string
+            uniqueItems: true
+        gpa:
+          type: number
+          format: float
+    MultipleStudentsDetail:
+      type: object
+      properties:
+        students:
+          type: array
+          items:
+            $ref: '#/components/schemas/StudentDetail'
+          uniqueItems: true
+        studentsCount:
           type: integer
           format: int32
     CourseDetailBrief:
@@ -236,6 +421,18 @@ components:
           type: string
         name:
           type: string
+        courseCode:
+          type: string
+        credits:
+          type: integer
+          format: int32
+        term:
+          $ref: '#/components/schemas/Term'
+        startYear:
+          type: integer
+          format: int32
+          minimum: 1993
+          maximum: 2100
     MultipleCourseDetailBrief:
       type: object
       properties:
