--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 
         <openapi-generator-maven-plugin.version>7.9.0</openapi-generator-maven-plugin.version>
         <mapstruct.version>1.6.2</mapstruct.version>
+        <lombok.version>1.18.42</lombok.version>
         <lombock-mapstruct-binding.version>0.2.0</lombock-mapstruct-binding.version>
     </properties>
 
@@ -73,6 +74,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
