fixup! Make Course controller return not found for batch lookup of courses in case no course from selected is found

--- a/src/main/resources/api/school-service-api.yaml
+++ b/src/main/resources/api/school-service-api.yaml
@@ -251,6 +251,8 @@ paths:
                 items:
                   $ref: '#/components/schemas/CourseDetail'
                 uniqueItems: true
+        '404':
+          description: No courses from specified were found
 #  /school/course/time/{courseId}:  # external
 #    get:
 #      tags:
