--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,18 @@ on:
     - master
   pull_request:
 
-permissions: write-all
+permissions:
+  contents: read
+  actions: read
+  checks: write
+
+env:
+  SPEC_FILE: ./api/school-service-api.json
+  AISA_TARGET_PATH: public_html/bachelor_thesis/school-service/api
+  PACT_BROKER_URL: ${{ vars.PACT_BROKER_URL }}
+  GIT_COMMIT: ${{ github.sha }}
+  COMPONENT_NAME_PASCAL_CASE: SchoolService
+  TARGET_PATH_OPENAPI_PEOPLE_SERVICE: provider-apis
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -22,18 +33,162 @@ jobs:
     name: Setup pipeline
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.version.outputs.short-sha }}
-      owner: ${{ steps.owner.outputs.owner }}"
+      long-sha: ${{ steps.get-sha.outputs.long-sha }}
+      short-sha: ${{ steps.get-sha.outputs.short-sha }}
+      branch-name: ${{ steps.get-sha.outputs.branch-name }}
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v5
+    - shell: sh
+      id: get-sha
+      run: |
+        LONG_SHA=$(git rev-parse "$GIT_COMMIT")
+        echo "long-sha=$LONG_SHA" >> $GITHUB_OUTPUT
+        SHORT_SHA=$(git rev-parse --short=7 "$GIT_COMMIT")
+        echo "short-sha=$SHORT_SHA" >> $GITHUB_OUTPUT
+        BRANCH_NAME=${{ github.head_ref || github.ref_name }}
+        echo "branch-name=$BRANCH_NAME" >> $GITHUB_OUTPUT
+
+  check-service-compiles:
+    name: Check that service compiles
+    runs-on: ubuntu-latest
+    needs: [ setup ]
     steps:
     - uses: actions/checkout@v5
-    - id: version
-      run: echo "short-sha=$(echo $GITHUB_SHA | cut -c 1-7)" >> $GITHUB_OUTPUT
-    - id: owner
-      run: echo "owner=$(yq '.spec.owner' ./catalog-info.yaml | head -1)" >> $GITHUB_OUTPUT
+    - name: Set up JDK
+      uses: actions/setup-java@v5
+      with:
+        java-version-file: .java-version
+        distribution: corretto
+    - name: Maven cache
+      uses: actions/cache/restore@v4
+      id: maven-cache
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-m2-
+    - name: Build with Maven
+      shell: sh
+      run: ./mvnw -B install -DskipTests=true
+    - name: Save cache if not hit
+      if: steps.maven-cache.outputs.cache-hit != 'true'
+      uses: actions/cache/save@v4
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
 
-  test:
-    name: Run Maven test and Sonar
+  contract-verification:
+    name: Contract verification
+    needs: [ setup, check-service-compiles ]
     runs-on: ubuntu-latest
     steps:
+    - name: Checkout
+      uses: actions/checkout@v5
+      with:
+        ref: ${{needs.setup.outputs.long-sha}}
+
+    - name: Set up JDK
+      uses: actions/setup-java@v5
+      with:
+        java-version-file: .java-version
+        distribution: corretto
+
+    - name: Maven cache
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-m2-
+
+    - name: Pact (contract) verification
+      shell: sh
+      run: |
+        ./mvnw verify pact:publish \
+            -Dpact.tests.skip=false \
+            -Ddefault.tests.skip=true \
+            -Dpactbroker.url=${{ env.PACT_BROKER_URL }} \
+            -Dpactbroker.auth.username=${{ secrets.PACT_BROKER_USERNAME }} \
+            -Dpactbroker.auth.password="${{ secrets.PACT_BROKER_PASSWORD }}" \
+            -Dpact.broker.url=${{ env.PACT_BROKER_URL }} \
+            -Dpact.broker.user="${{ secrets.PACT_BROKER_USERNAME }}" \
+            -Dpact.broker.password="${{ secrets.PACT_BROKER_PASSWORD }}" \
+            -Dpact.verifier.publishResults=true \
+            -Dpact.provider.version=${{ needs.setup.outputs.short-sha }} \
+            -Dpactbroker.providerBranch=${{ needs.setup.outputs.branch-name }} \
+            -Dpact.provider.branch=${{ needs.setup.outputs.branch-name }} \
+            -Dpact.consumer.version=${{ needs.setup.outputs.short-sha }} \
+            -Dpact.publish.consumer.branchName=${{ needs.setup.outputs.branch-name }} \
+            -Dpact.tags=${{ needs.setup.outputs.short-sha }} \
+            -Dpact_do_not_track=true
+    #    pactbroker.X is for provider part
+    #    pact.broker.X is for consumer part
+    - name: Contracts Report
+      uses: dorny/test-reporter@v2
+      if: success() || failure()
+      with:
+        name: Contract Tests
+        path: target/failsafe-reports/*.pact.*.xml
+        reporter: java-junit
+
+  validate-openapi:
+    name: OpenAPI Spec Validation
+    runs-on: ubuntu-latest
+    needs: [ setup, check-service-compiles]
+    steps:
     - uses: actions/checkout@v5
-    - uses: ./.github/actions/maven-test
+    - uses: actions/download-artifact@v5
+      with:
+        name: ${{ env.SPEC_ARTIFACT_NAME }}
+    - name: Validate OpenAPI Specification
+      uses: jakubfilo/openapi-validator@main
+      with:
+        spec-path: ${{ env.SPEC_FILE }}
+
+  publish-spec:
+    name: Publish OpenApi spec to predefined URL (FI Muni Aisa)
+    runs-on: ubuntu-latest
+    needs: [ setup, check-service-compiles, validate-openapi, contract-verification ]
+    if: >
+      github.ref_name == github.event.repository.default_branch &&
+      !startsWith(github.event.head_commit.message, '[AUTO CI-BOT]')
+    steps:
+    - uses: actions/checkout@v5
+    - uses: actions/download-artifact@v5
+      with:
+        name: ${{ env.SPEC_ARTIFACT_NAME }}
+    - name: Upload OpenApi spec to AISA server
+      uses: appleboy/scp-action@v1
+      with:
+        host: ${{ secrets.AISA_HOST }}
+        username: ${{ secrets.AISA_USERNAME }}
+        password: ${{ secrets.AISA_PASSWORD }}
+        source: ${{ env.SPEC_FILE }}
+        target: ${{ env.AISA_TARGET_PATH }}
+        overwrite: true
+
+  commit-openapi-spec:
+    name: Commit OpenAPI spec to People service repo
+    runs-on: ubuntu-latest
+    needs: [ setup, check-service-compiles, validate-openapi, contract-verification ]
+    if: >
+      github.ref_name == github.event.repository.default_branch &&
+      !startsWith(github.event.head_commit.message, '[AUTO CI-BOT]')
+    steps:
+    - uses: actions/checkout@v5
+    - uses: actions/download-artifact@v5
+      with:
+        name: ${{ env.SPEC_ARTIFACT_NAME }}
+    - name: Push School service OpenAPI spec to People service repo
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+        API_TOKEN_GITHUB: ${{ secrets.BACHELOR_THESIS_REPOS_TOKEN }}
+      with:
+        source_file: ${{ env.SPEC_FILE }}
+        destination_repo: jakubfilo/Bachelor-thesis-people-service
+        destination_folder: ${{ env.TARGET_PATH_OPENAPI_PEOPLE_SERVICE }}
+        user_email: 'ci-bot@school-service.org'
+        user_name: 'ci-bot'
+        destination_branch: 'master'
+        commit_message: '[AUTO CI-BOT]: update OpenAPI spec from School service'
