--- a/pom.xml
+++ b/pom.xml
@@ -181,7 +181,7 @@
                         </goals>
                         <configuration>
                             <generatorName>spring</generatorName>
-                            <inputSpec>${project.basedir}/src/main/resources/api/school-service-api.yaml</inputSpec>
+                            <inputSpec>${project.basedir}/api/school-service-api.json</inputSpec>
                             <apiPackage>${package.name}.api</apiPackage>
                             <modelPackage>${package.name}.api.model</modelPackage>
                             <modelNameSuffix>Api</modelNameSuffix>
